# datadec

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test_cell_spanning.py
configs/: bump_analysis.yaml  datadec_config.yaml  rescale_training_curve_exp.yaml
configs/table_formats/: wandb_analysis.yaml
data/raw_downloads/: download_hf.sh
docs/: data-sources.md  data_repo_consolildation_plan.md  plotting_evolution_log.md  wandb_integration.md
docs/analysis/: 2025_09_13_data_quality_assessment.md  2025_09_13_experimental_design_patterns.md  2025_09_13_training_eval_structure.md  (+2 more)
notebooks/: duck_wandb.py  explore_data.py  explore_wandb_data.py  metrics_all_ingest.py  new_ingest.py  qa_instances_ingest.py  start.py
scripts/: bump_analysis.py  debug_wandb_tags.py  download_data.py  dpo_analysis.py  plot_bump_by_params.py  plot_bump_by_tokens.py  plot_data.py  plot_means.py  plot_pretrain_posttrain_scaling.py  plot_scaling_analysis.py  plot_seeds.py  rescale_training_curve_exp.py  run_name_parsing_sample.py  sft_dataloader.py  simple_scaling_plot.py  super_simple_plot.py  sync_wandb_tags.py  test_multi_header.py  test_plotting.py  training_history_analysis.py  wandb_download.py
tests/: README.md  conftest.py  test_data.py  test_data_aggregate_results.py  test_data_filter_quality.py  test_data_select_subset.py  test_df_utils.py  test_ingest_paths.py  test_ingest_pipeline.py  test_ingest_types.py  test_ingest_utils_io.py  test_model_utils.py  test_refactor_validation.py  test_table_formatter.py  test_validation.py  test_visual_regression.py  test_wandb_downloader.py  test_wandb_store.py  test_wandb_transforms.py
(+107 files in other folders)
