[project]
name = "datadecide-loader"
version = "0.1.0"
description = "A library to download and process DataDecide datasets from Hugging Face."
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "numpy>=2.0.2",
    "pyarrow>=21.0.0",
    "huggingface_hub"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
