[project]
name = "datadec"
version = "0.1.0"
description = "A library to download and process DataDecide datasets from Hugging Face."
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "numpy>=2.0.2",
    "pyarrow>=21.0.0",
    "huggingface_hub",
    "orjson>=3.11.2",
    "srsly>=2.5.1",
    "attrs>=25.3.0",
    "clumper>=0.2.15",
    "duckdb>=1.4.0",
    "typer>=0.19.2",
    "pydantic>=2.12.4",
    "marimo-utils>=0.1.0",
]


[project.scripts]
datadec-ingest = "datadec.ingest.datadec_ingest:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
line-length = 88
cache-dir = ".ruff_cache"
exclude = ["outputs/*", "notebooks/*"]

[tool.uv.sources]
datadec = { workspace = true }

[dependency-groups]
dev = [
    "datadec",
    "pytest>=8.4.1",
]
